@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-16 10:20";
+char cvsdate[]="2004-06-17 00:22";
